--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
   <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
   <![endif]-->
-
+  <div  message-flash>  </div>
   <div  class="container" ng-view></div>
 
   <!-- In production use:
@@ -50,6 +50,7 @@
   <script src="bower_components/angular-messages/angular-messages.min.js"></script>
   <script src="bower_components/angular-ui-grid/ui-grid.min.js"></script>
   <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+  <script src="js/message-flash.js"></script>
   <script src="js/app.js"></script>
   <script src="js/services.js"></script>
   <script src="js/controllers.js"></script>
